--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<div class="quote">
 			<h3>Favorite Quote</h3>
-			<p>"For my part I know nothing with uncertainty, the sight of the stars make me dream - Vincent Van Gogh"
+			<p>"For my part I know nothing with uncertainty, but the sight of the stars make me dream - Vincent Van Gogh"
 			</p>
 		</div>
 
